--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   padding: 0;
   list-style-type: none;
   text-decoration: none;
-  font-family: Averta, sans-serif;  
+  font-family: Allerta, sans-serif;  
 }
 html{
   scroll-behavior: smooth;
